fixed the photo align bug

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,10 @@ h2{
     text-align: center;
 }
 
+.hobby-img {
+    text-align: center;
+}
+
 .tech-skills {
     background-color: #EEEEEE;
 }
